--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -484,15 +484,15 @@
         <div class="shopBack" id="wall">
             <div class="furnitureHeading">
                 <span> WALLART </span>
-                <a href="{% url 'sec-view' 'Wallart' %}">see more</a>
+                <a href="{% url 'sec-view' 'Wall Art' %}">see more</a>
             </div>
 
             <div class ="furnitureImages" id ="DecorativeSec">
-                <a href="{% url 'sec-view' 'Wallart' %}">
+                <a href="{% url 'sec-view' 'Wall Art' %}">
                     <div class="wallImageMobile-1"></div>
                     <!-- <img src="{% static 'Raul/Images/WallArtCategory.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
                 </a>
-                <a href="{% url 'sec-view' 'Wallart' %}">
+                <a href="{% url 'sec-view' 'Wall Art' %}">
                     <div class="wallImageMobile-2"></div>
                     <!-- <img src="{%static 'Raul/Images/WallArtfinal.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
                 </a>
@@ -504,15 +504,15 @@
         <div class="shopBack" id="decorative">
             <div class="furnitureHeading">
                 <span>DECORATIVE</span>
-                <a href="{% url 'sec-view' 'Decorative' %}">see more</a>
+                <a href="{% url 'sec-view' 'Decorative Accessories' %}">see more</a>
             </div>
 
             <div class ="furnitureImages">
-                <a href="{% url 'sec-view' 'Decorative' %}">
+                <a href="{% url 'sec-view' 'Decorative Accessories' %}">
                     <div class="decImageMobile-1"></div>
                     <!-- <img src="{% static 'Raul/Images/DecoAcc.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
                 </a>
-                <a href="{% url 'sec-view' 'Decorative' %}">
+                <a href="{% url 'sec-view' 'Decorative Accessories' %}">
                     <div class="decImageMobile-2"></div>
                     <!-- <img src="{%static 'Raul/Images/5.jpg'%}" draggable="false" alt="Furniture Photo" class="staticImage"> -->
                 </a>
