--- a/users/templates/users/venue.html
+++ b/users/templates/users/venue.html
@@ -347,7 +347,7 @@
         <h1 id="text2">Please make sure to include dates, times, and type of event. We can't wait to speak with you! </h1>
     </div>
     <div class ="venueButton">
-        <p id="emailButton"><a href="mailto:dberhan@buffalo.edu" id ="email">Send email</a></p>
+        <p id="emailButton"><a href="mailto:sales@raulavilainc.com" id ="email">Send email</a></p>
     </div>
 </div>
 
