--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -682,9 +682,10 @@
 
     <div class ="bannerSecond">
         <div class="layout">
+            <a href="{% url 'sec-view' 'Shopping The Layout' %}">
             <div class="layoutButton">
                 Shop This Layout.
-            </div>
+            </div></a>
         </div>
     </div>
 
