--- a/Raul_Inc/templates/Raul_Inc/press.html
+++ b/Raul_Inc/templates/Raul_Inc/press.html
@@ -62,15 +62,9 @@
         <li><a href="{%url 'Raul_Inc_contact' %}">CONTACT</a></li>
         <li>
             <div id="social">
-                <a href="https://www.facebook.com/RAULAVILAINC">
-                    <img src="{%static 'Raul_Inc/Images/Facebook10.ico' %}" width="17" height="17">
-                </a>
-                <a href="https://twitter.com/RaulAvilaInc">
-                    <img src="{%static 'Raul_Inc/Images/Twitter10.png' %}" width="17" height="17">
-                </a>
-                <a href="http://instagram.com/raulavilainc">
-                    <img src="{%static 'Raul_Inc/Images/ig10.png' %}" width="17" height="17">
-                </a>
+                <a href="https://www.facebook.com/RAULAVILAINC" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/RaulAvilaInc" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="http://instagram.com/raulavilainc" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             </div>
         </li>
     </ul>
@@ -347,9 +341,9 @@
                         <li><img src="gallery/2004/2004 November/02_PilgrimsProgress.jpg"/></li>
                       </ul>
                     </a>
-                    <a href="#"><img src="i/retinaThumbs/0101.jpg" alt=""/>
+                    <a href="#"><img src="i/retinaThumbs/01.jpg" alt=""/>
                       <ul class="coverImages">
-                        <li><img src="gallery/2004/2004 October/0101.jpg"/></li>
+                        <li><img src="gallery/2004/2004 October/01.jpg"/></li>
                         <li><img src="gallery/2004/2004 October/0202.jpg"/></li>
                         <li><img src="gallery/2004/2004 October/0303.jpg"/></li>
                       </ul>
