--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -217,7 +217,7 @@
                         <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
                         <a href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
                         <a href="{% url 'cat-view' 'Votives' %}">Votives</a>
-                        <a>f</a>
+
                     </div>
                 </div>
             </div>
@@ -420,7 +420,7 @@
     <div class="furniture" id ="FurnitureSec">
         <div class="shopBack">
             <div class="furnitureHeading">
-                <span>FURNITURE</span>
+                <span>furniture</span>
                 <a href="{% url 'sec-view' 'Furniture' %}">see more</a>
             </div>
 
@@ -443,7 +443,7 @@
     <div class="furniture" id ="FlowerSec">
         <div class="shopBack" id="flower">
             <div class="furnitureHeading">
-                <span>FLORAL</span>
+                <span>floral</span>
                 <a href="{% url 'sec-view' 'Floral' %}">see more</a>
             </div>
 
@@ -463,7 +463,7 @@
     <div class="furniture" id ="TableSec">
         <div class="shopBack" id="table">
             <div class="furnitureHeading">
-                <span>TABLETOP</span>
+                <span>tabletop</span>
                 <a href="{% url 'sec-view' 'Tabletop' %}">see more</a>
             </div>
 
