--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -35,7 +35,7 @@
         <div class ="bigContainer2">
             <a href="{% url 'Raul-SecondHome' %}">
                 <div class="container" id="raulBanner">
-                    <p id ="raul"> raùl</p>
+                    <p id ="raul"> raùl retail</p>
                     <div class="backgroundText2">
                         <figcaption>
                             RAUL
