raul inc contact

--- a/Raul_Inc/templates/Raul_Inc/contact.html
+++ b/Raul_Inc/templates/Raul_Inc/contact.html
@@ -47,7 +47,7 @@
                     Suite 1012<br>
                     New York, NY 10010<br>
                     O 212-242-7673<br>
-                    <a href="mailto:info@raulavilainc.com?subject=Inquiry from website">info@raulavilainc.com</a>
+                    <a href="mailto:raul@raulavilainc.com?subject=Inquiry from website">raul@raulavilainc.com</a>
                 </p>
             </address>
         </div>
@@ -59,7 +59,7 @@
                     Suite 700<br>
                     Miami Beach, FL 33139<br>
                     O 786-650-1192<br>
-                    <a href="mailto:info@raulavilainc.com?subject=Inquiry from website">info@raulavilainc.com</a>
+                    <a href="mailto:raul@raulavilainc.com?subject=Inquiry from website">raul@raulavilainc.com</a>
                 </p>
             </address>
         </div>
@@ -70,7 +70,7 @@
                     7 Rue De La Paix<br>
                     Paris, France 75002<br>
                     O +33 1 79 98 11 53<br>
-                    <a href="mailto:info@raulavilainc.com?subject=Inquiry from website">info@raulavilainc.com</a>
+                    <a href="mailto:raul@raulavilainc.com?subject=Inquiry from website">raul@raulavilainc.com</a>
                 </p>
             </address>
         </div>
