--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -394,7 +394,7 @@
     <div class ="bannerHead" id = "mainBanner">
         <video src="{% static 'Raul/Images/Raul_Movie_Fast.mp4' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
-            <figcaption><a href="#here"><button> explore the shop </button></a></figcaption>
+            <figcaption><a href="{% url 'Raul-product' %}"><button> explore the shop </button></a></figcaption>
         </div>
     </div>
 
