--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -634,9 +634,6 @@ nav li {
 
 .textHover .textHeading{
     border-radius: 6px;
-    background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
 }
 
 .layout{
@@ -2331,7 +2328,7 @@ footer{
         top: 45%;
         left: 50%;
         padding:16px 32px;
-        background: rgba(0, 0, 0, 0.8) -webkit-linear-gradient(#f8f18e, #d6a55b);
+        background: rgba(0, 0, 0, 0.8) ;
         transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
     }
