--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -710,7 +710,7 @@
         <div class = "section">
             <div class="firstSection">
                 <div class = "textHover">
-                    <a href="{% url 'sec-view' 'Rug Collection' %}">  <div class = "textHeading"> shop this collection </div></a>
+                    <a href="{% url 'sec-view' 'Rug Collection' %}">  <div class = "textHeading"> <div class="shopButton">shop this collection</div> </div></a>
 
                 </div>
             </div>
@@ -718,7 +718,7 @@
             <div class="secondSection">
                 <div class = "textHover">
 
-                    <a href="{% url 'sec-view' 'Pot Collection' %}">  <div class = "textHeading"> shop this collection </div></a>
+                    <a href="{% url 'sec-view' 'Pot Collection' %}">  <div class = "textHeading"> <div class="shopButton">shop this collection </div></div></a>
                 </div>
             </div>
         </div>
