--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -95,9 +95,8 @@
             padding:10px 30px;
             font-size:25px;
             margin:10px auto;
-            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #cfbb63;
+            background-color: transparent;
             outline: none;
             border:none;
             border: 3px solid #cfbb63;
@@ -110,9 +109,8 @@
             padding:10px 10px;
             font-size:20px;
             margin:10px auto;
-            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            background: transparent;
+            color: #cfbb63;
             outline: none;
             border:none;
             border: 3px solid #cfbb63;
