--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -117,6 +117,7 @@
             font-family: myFirstFont;
             text-align: center;
             font-weight: 800;
+            -webkit-appearance: none;
         }
 
         .cart-btn {
