--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -92,8 +92,8 @@
             <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
             <div class="hoverDiv2">
                 <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>email@email.com</span><br><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (900)-009-9090</span>
+                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulavilainc.com</span><br><br>
+                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (347)-432-5436</span>
             </div>
         </div>
 
