--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -59,8 +59,7 @@
 
                                                         <a href="{% url 'Raul-single' item.product.slug %}">{{item.product}}</a>
                                                         <div class="product-info">
-                                                            <div>Display: <span class="value">studded vase ${{item.product.price}}
-                                                                    Metal Vase Bronze 5 H x 5 W</span></div>
+                                                            <div>Description: <span class="value">{{item.product.description}}</span></div>
                                                             {% for sub_item in item.variation.all%}
                                                                 <div> <span class="value">{{sub_item.title}}</span></div>
                                                             {% endfor %}
