--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -92,6 +92,22 @@
         document.getElementById('cartPopUp').style.animation = "fadeInPop 2.5s";
     }
 </script>
+
+<footer>
+    <div class = "hoursOfOperation">
+        <h1>
+            Monday - Friday: 7AM - 8PM
+        </h1>
+        <h1>
+            Questions? <br>Please email us at raul@raulavilainc.com
+        </h1>
+        <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
+        <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
+        <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/twitter1.png' %}" height="32"> </a>
+
+    </div>
+
+</footer>
 </body>
 
 </html>
