--- a/Raul/static/Raul/shopping-cart.css
+++ b/Raul/static/Raul/shopping-cart.css
@@ -511,4 +511,24 @@ input:hover{
 .headers figure{
 	margin:16px 40px;
 }
+footer{
+    height: auto;
+    width:100%;
+    background-color: #929292;
+    display: grid;
+    grid-template-rows: 80% 20%;
+    text-transform: none;
+    padding:50px 0;
+}
+
+.hoursOfOperation{
+    padding:20px 0;
+    width: 100%;
+    text-align: center;
+}
+
+.hoursOfOperation h1{
+    font-size: 18px;
+    padding:10px 0;
+}
 
