--- a/Raul/static/Raul/style.css
+++ b/Raul/static/Raul/style.css
@@ -275,3 +275,24 @@ h5{
 		padding :0px 0px 0px 0px;
 	}
 }
+
+footer{
+	height: auto;
+	width:100%;
+	background-color: #929292;
+	display: grid;
+	grid-template-rows: 80% 20%;
+	text-transform: none;
+	padding:50px 0;
+}
+
+.hoursOfOperation{
+	padding:20px 0;
+	width: 100%;
+	text-align: center;
+}
+
+.hoursOfOperation h1{
+	font-size: 18px;
+	padding:10px 0;
+}
