--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -91,7 +91,7 @@
                 <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
                 <div class="hoverDiv2">
                     <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
-                    <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>raul@raulavilainc.com</span><br><br>
+                    <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulavilainc.com</span><br><br>
                     <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (347)-432-5436</span>
                 </div>
             </div>
@@ -736,8 +736,8 @@
                 Questions? <br>Please email us at raul@raulavilainc.com
             </h1>
             <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
-            <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/Facebook1.png' %}" height="32"> </a>
-            <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/Twitter1.png' %}" height="32"> </a>
+            <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
+            <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/twitter1.png' %}" height="32"> </a>
 
         </div>
 
