--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -737,7 +737,7 @@
             </h1>
             <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
             <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
-            <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/twitter1.png' %}" height="32"> </a>
+            <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/twitter.png' %}" height="32"> </a>
 
         </div>
 
