--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -107,6 +107,7 @@
         transition: 0.4s ease-in-out;
         font-family: myFirstFont;
         font-size: 20px;
+        -webkit-appearance: none;
     }
 
     .loginRegister li{
