--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -737,7 +737,7 @@
             </h1>
             <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
             <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
-            <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/twitter.png' %}" height="32"> </a>
+            <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/iconmonstr-twitter-1.svg' %}" height="23"> </a>
 
         </div>
 
@@ -746,8 +746,8 @@
     <button onclick="topFunction()" id="scrollTop"> <img src="{% static 'Raul/Images/arrowDown.png' %}"> </button>
 
     <script src="{% static 'Raul/JS/script.js' %}" charset="UTF-8">
-
     </script>
+    <script src="https://kit.fontawesome.com/16784c67a8.js" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
