--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -22,7 +22,7 @@
         <div class="bigContainer">
             <a href="{% url 'Raul_Inc_Home' %}">
                 <div class="container" id="cafeBanners">
-                    <p id ="raulAvila">RAUL AVILA INC.</p>
+                    <p id ="raulAvila">RAÚL ÀVILA INC.</p>
                     <!-- <img src="{% static 'Raul/Images/3.jpg' %}" id="bgPic"> -->
                     <div class = "backgroundText3">
                         <figcaption>
@@ -35,7 +35,7 @@
         <div class ="bigContainer2">
             <a href="{% url 'Raul-SecondHome' %}">
                 <div class="container" id="raulBanner">
-                    <p id ="raul"> raùl retail</p>
+                    <p id ="raul"> raùl </p>
                     <div class="backgroundText2">
                         <figcaption>
                             RAUL
