--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -258,10 +258,12 @@
     <footer>
         <div class = "hoursOfOperation">
             <h1>
-                Monday - Friday: 7AM - 8PM
+                Sunday - Thursday 8:00AM to 9:00PM<br>
+                Friday - Saturday 8:00AM to 11:00PM<br>
+
             </h1>
             <h1>
-                Phone: 1 (374) 974-7200
+                Phone: 1 (347)-990-2100
             </h1>
             <h1>
                 Address: 218 8th Avenue, New York, NY 10011, USA
