--- a/users/templates/users/venue.html
+++ b/users/templates/users/venue.html
@@ -344,7 +344,7 @@
 <div class = "venueBox">
     <div class="venueText">
         <h1 id = "text"> Please click the button below to send us an e-mail to reserve either raul retail or cafe-floor</h1>
-        <h1 id="text2">Please make sure to include dates, times, and type of event. We can't wait to speak with you! </h1>
+        <h1 id="text2">Please make sure to include dates, times, and type of event. Thank You! </h1>
     </div>
     <div class ="venueButton">
         <p id="emailButton"><a href="mailto:sales@raulavilainc.com" id ="email">Send email</a></p>
