--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -91,8 +91,8 @@
                 <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
                 <div class="hoverDiv2">
                     <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
-                    <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulavilainc.com</span><br><br>
-                    <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (347)-432-5436</span>
+                    <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulretail.com</span><br><br>
+                    <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (347)-947-7200</span>
                 </div>
             </div>
 
@@ -394,7 +394,7 @@
     <div class ="bannerHead" id = "mainBanner">
         <video src="{% static 'Raul/Images/Raul_Movie_Fast.mp4' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
-            <figcaption><a href="#here"><button> <div class="shopButton">explore the shop</div> </button></a></figcaption>
+            <figcaption><a href="#borderBottom"><button> <div class="shopButton">explore the shop</div> </button></a></figcaption>
         </div>
     </div>
 
@@ -730,10 +730,10 @@
     <footer>
         <div class = "hoursOfOperation">
             <h1>
-                Monday - Friday: 7AM - 8PM
+                Monday - Saturday: 9:30AM - 8:30PM
             </h1>
             <h1>
-                Questions? <br>Please email us at raul@raulavilainc.com
+                Questions? <br>Please email us at raul@raulretail.com
             </h1>
             <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
             <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
