--- a/Raul_Inc/templates/Raul_Inc/contact.html
+++ b/Raul_Inc/templates/Raul_Inc/contact.html
@@ -43,22 +43,9 @@
             <div class="addressheader">New York</div>
             <address>
                 <p>
-                    20 West 22 Street<br>
-                    Suite 1012<br>
-                    New York, NY 10010<br>
+                    216 8th Avenue<br>
+                    New York, NY 10011<br>
                     O 212-242-7673<br>
-                    <a href="mailto:raul@raulavilainc.com?subject=Inquiry from website">raul@raulavilainc.com</a>
-                </p>
-            </address>
-        </div>
-        <div class="address">
-            <div class="addressheader">Miami</div>
-            <address>
-                <p>
-                    1688 Meridian Ave<br>
-                    Suite 700<br>
-                    Miami Beach, FL 33139<br>
-                    O 786-650-1192<br>
                     <a href="mailto:raul@raulavilainc.com?subject=Inquiry from website">raul@raulavilainc.com</a>
                 </p>
             </address>
