--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -106,7 +106,7 @@
         </h1>
         <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
         <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
-        <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/twitter1.png' %}" height="32"> </a>
+        <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/iconmonstr-twitter-1.svg' %}" height="23"> </a>
 
     </div>
 
