--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -46,7 +46,7 @@
 
         .imageThumbs{
             display: grid;
-            grid-template-rows: 150px 150px auto auto;
+            grid-template-rows: 150px 150px 150px;
             padding:20px;
         }
 
@@ -309,7 +309,7 @@
 
             .imageThumbs{
                 display: grid;
-                grid-template-columns: auto auto;
+                grid-template-columns: auto auto auto;
                 grid-template-rows: 80px;
                 padding:20px;
                 place-content: center;
