--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -114,8 +114,8 @@ a{
     width: 100%;
     transition: 0.2s ease-in;
     top:0;
-    overflow: hidden;
-    z-index: 99;
+    /* overflow: hidden; */
+    z-index: 4;
     color:white;
     background: transparent;
 }
@@ -231,6 +231,7 @@ nav ul li a:hover{
     font-family: myFirstFont;
     background-color:transparent;
     transition: 0.4s ease-in-out;
+    z-index:2;
 }
 
 .dropDownContent{
@@ -240,12 +241,16 @@ nav ul li a:hover{
     background-color: #6d6d6d;
     width: 100%;
     padding:30px 0px;
-    z-index: -1;
+    z-index: 1;
     transition: 0.4s ease-in-out;
     border-bottom: 1px solid black;
     animation: slideInNav 1s;
     text-align: center;
    
+}
+
+figure{
+    z-index:5;
 }
 
 @keyframes slideInNav{
@@ -667,6 +672,10 @@ nav li {
 
 .bannerSecond:hover .layout{
     opacity: 1;
+}
+
+.category{
+    z-index:2;
 }
 
 /* Body Ended */
@@ -2565,7 +2574,7 @@ footer{
     .category{
         overflow: hidden;
         color:transparent;
-       font-family: myFirstFont;
+        font-family: myFirstFont;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
@@ -2601,7 +2610,7 @@ footer{
     figure{
         display: grid;
         grid-template-columns: 60px 60px auto 60px 60px 60px;
-        z-index: 2;
+        z-index: 5;
     }
 
     figure #logo{
@@ -3718,7 +3727,7 @@ footer{
     figure{
         display: grid;
         grid-template-columns: 60px 60px auto 60px 60px 60px;
-        z-index: 2;
+        z-index: 5;
     }
 
     figure #logo{
@@ -4846,7 +4855,7 @@ footer{
     figure{
         display: grid;
         grid-template-columns: 60px 60px auto 60px 60px 60px;
-        z-index: 2;
+        z-index: 5;
     }
 
     figure #logo{
@@ -4871,6 +4880,7 @@ footer{
         font-family: myFirstFont;
         background-color:transparent;
         transition: 0.4s ease-in-out;
+        z-index:2;
     }
 
     .dropDownContent{
@@ -4880,7 +4890,7 @@ footer{
         background-color: #6d6d6d;
         width: 100%;
         padding:30px 0px;
-        z-index: -1;
+        z-index: 1;
         transition: 0.4s ease-in-out;
         border-bottom: 1px solid black;
         animation: slideInNav 1s;
@@ -5681,84 +5691,6 @@ footer{
         -webkit-animation: animatezoom 0.6s;
         animation: animatezoom 0.6s
       }
-
-    /* .popUpMessage{
-        display: block; 
-        position: fixed;
-        z-index: -1; 
-        left: 0;
-        top: 0;
-        width: 100%; 
-        height: 100%; 
-        background-color: rgb(0,0,0); 
-        background-color: rgba(0,0,0,0.5);
-        padding-top: 20px;
-        overflow: hidden;
-        -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-        animation: 5s fadeout ;
-    }
-
-    .messageRegister{
-        background-color: #333333;
-        margin: 15% auto 15% auto; 
-        border: 1px solid rgba(0,0,0,0.5);
-        color:#cfbb63;
-        width: 400px;
-        height:200px; 
-        max-height:250px;
-        font-family: myFirstFont;
-        border-radius: 50px;
-        
-    }
-
-    .messageRegister div{
-        text-align: center;
-        width:200px;
-        margin: 0px auto;
-        padding:60px 0px;
-        font-size: 19px;
-        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
-
-    @-webkit-keyframes fadein {
-        from {bottom: 0; opacity: 0;} 
-        to {bottom: 30px; opacity: 1;}
-      }
-      
-      @keyframes fadein {
-        from {bottom: 0; opacity: 0;}
-        to {bottom: 30px; opacity: 1;}
-      }
-      
-      @-webkit-keyframes fadeout {
-        from {bottom: 30px; opacity: 1;} 
-        to {bottom: 0; opacity: 0;}
-      }
-      
-      @keyframes fadeout {
-        0%{
-            opacity:0.5;
-            z-index: 190;
-        }
-        25%{
-            opacity: 0.8;
-            z-index: 200;
-        }
-        50%{
-            opacity:1;
-            z-index: 200;
-        }
-        75%{
-            opacity: 0.5;
-            z-index: 200;
-        }
-        100%{
-            opacity: 0;
-            z-index: -1;
-        }
-      } */
 
     footer{
         height: 200px;
